logs/Slang/generated/keywords/5.6.2--keyword_always.sv.log
name: always
description: The 'always' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_always.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_always.sv:8:8: error: expected declarator
    bit always;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_always.sv:8:15: error: expected statement
    bit always;
              ^
